# Course-Homework

./: .gitignore  pyproject.toml
10_lesson_homework/: five.py
11_lesson_homework/: five.py  four.py  one.py  three.py  two.py
12_lesson_homework/: one.py  three.py  two.py
13_lesson_homework/: five.py  four.py  one.py  three.py  two.py
14_lesson_homework/: homework.sql
15_lesson_homework/: one.sql
16_lesson_homework/: .gitignore  README.md  alembic.ini  main.py  models.py  pyproject.toml  seed_data.sql  ticket_reservation_service.sql
16_lesson_homework/alembic/: env.py
16_lesson_homework/alembic/versions/: 55ab8148dfcb_first_commit.py  97841f07c11b_initial_tables.py  c9a4ece709c5_added_autoincrement.py
16_lesson_homework/core/controller/: controller.py  events.py  tickets.py
16_lesson_homework/core/model/: events.py  model.py  places.py  tickets.py
16_lesson_homework/core/view/: events.py  tickets.py  view.py
19_lesson_homework/: .env  main.py
19_lesson_homework/controller/: task.py  user.py
19_lesson_homework/model/: task.py  user.py
19_lesson_homework/templates/: base.html  index.html
19_lesson_homework/view/: auth.py  (+1 more)
1_lesson_homework/: homework_1.txt
2_lesson_homework/: main.py
3_lesson_homework/: eight.py  first.py  five.py  four.py  second.py  seven.py  six.py  three.py
4_lesson_homework/: main.py
5_lesson_homework/: main.py
6_lesson_homework/: main.py
7_lesson_homework/: dop_main.py  main.py
8_lesson_homework/: size.py
9_lesson_homework/: eight.py  five.py  four.py  one.py  seven.py  six.py  test.txt  three.py  two.py
(+4 files in other folders)
