[project]
name = "16-lesson-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "simple-term-menu>=1.6.6",
    "sqlalchemy>=2.0.43",
    "tabulate>=0.9.0",
]
